# Ai-compress

./: .gitignore  README.md  benchmark.py  benchmark_full.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample.aicp  sample.txt  test_compile.py  test_data.txt  test_lookup.py
.github/workflows/: ci.yml
.jules/: bolt.md
backend/core/: engine.py  manager.py  model.py
backend/utils/: arithmetic.py
frontend/: app.py
models/: history.json
tests/: test_arithmetic.py  test_integration.py  test_model.py  test_training.py
